--- a/Copy_of_GroupAssignment1_Template.ipynb
+++ b/Copy_of_GroupAssignment1_Template.ipynb
@@ -31,7 +31,8 @@
         "colab_type": "text"
       },
       "source": [
-        "#Car Rental"
+        "#Car Rental Business \n",
+        "Danny Clark, Lauren Ross, and Laurence Castillo"
       ]
     },
     {
